refactoring whole client from pure html to vue.js

--- a/web-server/src/main/resources/application.properties
+++ b/web-server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=administrator
 
 # Damit die von JPA (Hibernate) verwalteten Tabellen nicht bei jedem Neustart (Run) gelöscht
 # werden, muss die Strategie von  Hibernate auf Update statt dem Default (create-drop) gesetzt werden
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Tomcat-Server-Port
 server.port = 8081
