--- a/web-server/src/main/resources/application.properties
+++ b/web-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Verbindungsdaten zur MySQL-Datenbank (DATENBANKENAME, BENUTZERNAME UND PASSWORT ANPASSEN)
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/skilift?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=administrator
+spring.datasource.password=Administrator
 
 # Damit die von JPA (Hibernate) verwalteten Tabellen nicht bei jedem Neustart (Run) gelöscht
 # werden, muss die Strategie von  Hibernate auf Update statt dem Default (create-drop) gesetzt werden
