--- a/web-server/pom.xml
+++ b/web-server/pom.xml
@@ -28,6 +28,14 @@
     		<artifactId>mail</artifactId>
     		<version>1.5.0-b01</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+		<dependency>
+   			<groupId>javax.mail</groupId>
+    		<artifactId>javax.mail-api</artifactId>
+    		<version>1.6.0</version>
+		</dependency>
+		
         
         <!-- Spring Boot Starter Web-Libraries inkl. REST -->
         <dependency>
